k8s-service.yml
apiVersion: v1
kind: Service
metadata:
    name: tasks-api
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
        component: tasks-api
    type: ClusterIP
