k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: tasks-api
spec:
    rules:
    - http:
        paths:
        - path: /foo
          pathType: Prefix
          backend:
            service:
              name: tasks-api
              port:
                number: 80
